@@ -1,4 +1,4 @@
-.TH darkice 1 "January 14, 2007" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "February 25, 2007" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -99,9 +99,9 @@ Developed with contributions by
     Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
     Joel Ebel <jbebel@ncsu.edu>
     <jochen2@users.sourceforge.net>
-	Alexander Vlasov <zulu@galaradio.com>
+    Alexander Vlasov <zulu@galaradio.com>
     Mariusz Mazur <mmazur@kernel.pl>
-	<derrick@csociety.org>
+    dsk <derrick@csociety.org>
   
 .SH LINKS
 Project homepage:
