@@ -1,5 +1,7 @@
 DarkIce next release
 
+    o added user-defined date formatting for the fileAddDate options,
+      thanks to dsk <derrick@csociety.org>
     o added logging facility - [file-X] targets will cut the saved file
       and rename it as needed when darkice recieves the SIGUSR1 signal
     o added default configuration file handling - if no configuration file
@@ -8,7 +10,7 @@ DarkIce next release
       thanks to Alexander Vlasov <zulu@galaradio.com> and
       Mariusz Mazur <mmazur@kernel.pl>
     o fix to enable file dump feature using ogg vorbis.
-      thanks to <derrick@csociety.org>
+      thanks to dsk <derrick@csociety.org>
 
 
 19-05-2006 DarkIce 0.17.1 released
